--- a/Pedidos.Infraestrutura/Pedidos.Infraestrutura.csproj
+++ b/Pedidos.Infraestrutura/Pedidos.Infraestrutura.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pedidos.Dominio\Pedidos.Dominio.csproj" />
+    <ProjectReference Include="..\Pedidos.Dominio\Pedidos.Contrato.csproj" />
   </ItemGroup>
 
 </Project>
